--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,8 +18,8 @@ bibliography: references.bib
 format:
   html:
     theme: cosmo
-  pdf:
-    documentclass: scrreprt
+#  pdf:
+#    documentclass: scrreprt
 
 execute:
   freeze: auto
