--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,12 +23,18 @@ jobs:
           # version: 0.9.600
 
       - name: Set Up Virtual Environment and Install dependencies
-        run: |
-          python -m venv env
-          source env/bin/activate
-          python -m pip install --upgrade pip
-#          export PKG_CONFIG_PATH=/usr/local/bin/pkgconfig
-          pip install -r requirements.txt
+        uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
+        with:
+          requirement_files: requirements.txt  # this is optional
+
+      - uses: syphar/restore-pip-download-cache@v1
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+
+      # the package installation will only be executed when the
+      # requirements-files have changed.
+      - run: pip install -r requirements.txt
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
