--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,14 +13,6 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
-
-      - name: Set Up Virtual Environment and Install dependencies
-        run: |
-          python -m venv env jupyter
-          source env/bin/activate
-          python -m pip install --upgrade pip
-          # export PKG_CONFIG_PATH=/usr/local/bin/pkgconfig
-          pip install -r requirements.txt
         
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
@@ -29,6 +21,21 @@ jobs:
           tinytex: true 
           # uncomment below and fill to pin a version
           # version: 0.9.600
+
+      - name: Install Python and Dependencies
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+      - run: pip install jupyter
+          
+      - name: Set Up Virtual Environment and Install dependencies
+        run: |
+          python -m venv env jupyter
+          source env/bin/activate
+          python -m pip install --upgrade pip
+          # export PKG_CONFIG_PATH=/usr/local/bin/pkgconfig
+          pip install -r requirements.txt
           
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
