add Plotnine Presentation

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ book:
     - mysection.qmd
     - exercises.qmd
     - references.qmd
-
+    - Plotnine.qmd
 bibliography: references.bib
 
 format:
