fixed matplotlib section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
     - quarto.qmd
     - python.qmd
     - stats.qmd
+    - visual.qmd    
     - nycrash.qmd
     - mysection.qmd
     - exercises.qmd
