--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,9 +12,9 @@ book:
     - git.qmd
     - quarto.qmd
     - python.qmd
+    - pandas.qmd
     - stats.qmd
     - visual.qmd
-    - pandas2.qmd
     - nycrash.qmd
     - exercises.qmd
     - references.qmd
