--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ book:
     - pandas.qmd
     - stats.qmd
     - visual.qmd
+    - supervised.qmd
     - nycrash.qmd
     - exercises.qmd
     - references.qmd
