added nltk section under advanced topics

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,7 @@ book:
     - stats.qmd
     - visual.qmd
     - supervised.qmd
+    - advanced.qmd
     - nycrash.qmd
     - exercises.qmd
     - references.qmd
