incorporated geopandas by kaitlyn bedard

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ book:
     - quarto.qmd
     - python.qmd
     - pandas.qmd
-    - geopandas.qmd
+    - geo.qmd
     - descr.qmd
     - stats.qmd
     - visual.qmd
